# edge-esp32

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
.github/workflows/: build_examples.yml
common/nabto/src/: esp32_dns.c  esp32_logging.c  esp32_logging.h
common/nabto_device/src/: esp32_dns.h
common_components/nabto_device/: CMakeLists.txt  Kconfig
common_components/nabto_device/src/: esp32_dns.c  esp32_dns.h  esp32_event_queue.h  esp32_logging.c  esp32_mdns.c  esp32_mdns.h  nm_select_unix.c  nm_select_unix.h  nm_select_unix_tcp.c  nm_select_unix_udp.c  platform_modules_esp32.c  select_unix_event_queue.c  select_unix_event_queue.h
common_components/nabto_esp32_example/: CMakeLists.txt  Kconfig  Kconfig.projbuild
common_components/nabto_esp32_example/include/: connection_event_handler.h  device_event_handler.h  nabto_esp32_example.h
common_components/nabto_esp32_example/src/: device_event_handler.c  nabto_esp32_example.c  nabto_init.c  nabto_init.h  wifi_init.c
common_components/nabto_esp32_iam/: CMakeLists.txt
common_components/nabto_esp32_iam/include/: nabto_esp32_iam.h
common_components/nabto_esp32_iam/src/: nabto_esp32_iam.c
common_components/nabto_esp32_util/: CMakeLists.txt
common_components/nabto_esp32_util/include/: nabto_esp32_util.h
common_components/nabto_esp32_util/src/: nabto_esp32_util_nn_log.c
components/nabto/: CMakeLists.txt  nabto_types.h
components/nabto/src/: nm_select_unix.c  nm_select_unix_tcp.c  nm_select_unix_udp.c  platform_modules_esp32.c
components/nabto5-esp-idf/: component.mk  logging.c  logging.h  nabto_device_threads_esp.c
components/nabto_device/: CMakeLists.txt  Kconfig  idf_component.yml
components/nabto_device/include/tinycbor/: cbor.h
components/nabto_device/src/: esp32_event_queue.c  esp32_logging.h  esp32_mdns.c  nm_select_unix.c  nm_select_unix.h  nm_select_unix_tcp.c  nm_select_unix_udp.c
components/nabto_esp32_example/: CMakeLists.txt  Kconfig
components/nabto_esp32_example/include/: nabto_esp32_example.h
components/nabto_esp32_example/src/: nabto_esp32_example.c  nabto_init.c  wifi_init.c
examples/audio-demo/: .gitignore  CMakeLists.txt  sdkconfig.defaults
examples/audio-demo/components/tcp_server_stream/: CMakeLists.txt  tcp_server_stream.c
examples/audio-demo/components/tcp_server_stream/include/: tcp_server_stream.h
examples/audio-demo/main/: CMakeLists.txt  Kconfig.projbuild  audio_demo.c  audio_server.c  audio_server.h  edgecam_iam.c  edgecam_iam.h  tcp_server.c
examples/audio-demo/tools/: blib  test.sh
examples/components/micro-rtsp/: CMakeLists.txt  CRtspSession.cpp  CRtspSession.h  CStreamer.cpp  CStreamer.h  OV2640.cpp  OV2640.h  OV2640Streamer.cpp  platglue-arduino.h  platglue-esp-idf.h
examples/components/nabto_esp32_example/src/: connection_event_handler.c  nabto_esp32_example.c
examples/components/nabto_esp32_iam/: CMakeLists.txt
examples/components/nabto_esp32_iam/include/: nabto_esp32_iam.h
examples/components/nabto_esp32_iam/src/: nabto_esp32_iam.c
examples/components/nabto_esp32_util/: CMakeLists.txt
examples/esp-eye-camera/: CMakeLists.txt  sdkconfig.defaults
examples/esp-eye-camera/main/: .gitignore  CMakeLists.txt  Kconfig.projbuild  edgecam_esp32.c  esp32-rtsp.cpp  perfmon.c
examples/simple/: CMakeLists.txt
examples/simple/main/: CMakeLists.txt  hello_world.c  hello_world_coap_handler.c
examples/simple_coap/: CMakeLists.txt  sdkconfig.defaults
examples/simple_coap/main/: CMakeLists.txt  Kconfig.projbuild  hello_world_coap_handler.c  hello_world_coap_handler.h  simple_coap_esp32.c
examples/tcptunnel/: CMakeLists.txt  sdkconfig.defaults
examples/tcptunnel/main/: CMakeLists.txt  Kconfig.projbuild  device_config.h  iam_config.c  iam_config.h  print_stats.c  print_stats.h  private_key.c  private_key.h  simple_perf.c  simple_perf.h  simple_webserver.c  tcp_tunnel_state.h  tcptunnel_esp32.c  tcptunnel_iam.c  tcptunnel_iam.h
examples/tcptunnel2/: CMakeLists.txt  sdkconfig.defaults
examples/tcptunnel2/main/: tcptunnel_esp32.c  tcptunnel_iam.h
examples/thermostat/: CMakeLists.txt  sdkconfig.defaults
examples/thermostat/main/: CMakeLists.txt  Kconfig  Kconfig.projbuild  thermostat.c  thermostat_esp32.c  thermostat_iam.c  thermostat_iam.h  thermostat_led.c  thermostat_led.h  thermostat_state_esp32.c  thermostat_state_esp32.h
main/: CMakeLists.txt  hello_world.c  station_example_main.c
simple/: .gitignore  CMakeLists.txt
simple/components/nabto/: CMakeLists.txt
simple/main/: CMakeLists.txt  Kconfig.projbuild  hello_world.c
tcptunnel/: CMakeLists.txt  sdkconfig.defaults
tcptunnel/main/: CMakeLists.txt  device_config.c  device_config.h  device_event_handler.c  device_event_handler.h  iam_config.c  iam_config.h  json_config.c  json_config.h  simple_webserver.c  simple_webserver.h  tcp_tunnel_main.c  tcp_tunnel_services.c  tcp_tunnel_services.h  tcp_tunnel_state.c
